--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,6 +18,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: rohits.jfrog.io
+  USER_NAME: rohit.shrivastava04@gmail.com
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
@@ -41,7 +42,7 @@ jobs:
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          username: ${{ env.USER_NAME }}
           password: ${{ secrets.JFROG_TOKEN }}
 
       # Extract metadata (tags, labels) for Docker
