--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,6 +18,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: rohits.jfrog.io
+  REPOSITORY: default-docker-remote
   USER_NAME: rohit.shrivastava04@gmail.com
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
@@ -51,7 +52,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
