--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,7 +18,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: rohits.jfrog.io
-  REPOSITORY: default-docker-remote
+  REPOSITORY: default-docker-virtual
   USER_NAME: rohit.shrivastava04@gmail.com
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
